# Chess

./: CMakeLists.txt  README.md  artificial_intelligence.cpp  artificial_intelligence.h  chessboard.cpp  chessboard.h  chesspiece.cpp  chesspiece.h  chesspieceforartifical.cpp  chesspieceforartifical.h  clickablerect.cpp  clickablerect.h  dialogendgame.cpp  dialogendgame.h  eatenpieces.cpp  eatenpieces.h  figures.qrc  main.cpp  mainWindow.cpp  mainWindow.h  mainmenudialog.cpp  mainmenudialog.h  minimax.h  moveswidget.cpp  moveswidget.h  pawnselection.cpp  pawnselection.h  playerwidget.cpp  playerwidget.h  sideselectiondialog.cpp  sideselectiondialog.h
